# Video-Generation

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  railway.json  run_migrations.mjs  run_migrations.py
backend/: .env.example  Dockerfile  Procfile  alembic.ini  pyproject.toml  railway.toml
backend/assets/music/: library.json
backend/assets/templates/: description_template.txt
backend/fixtures/rhyo_reports/: bali_kuta_seminyak.md  bangkok_sukhumvit.md  hyderabad_banjara_hills.md  hyderabad_old_city.md  istanbul_sultanahmet.md  lisbon_alfama.md  mexico_city_roma_condesa.md
backend/scripts/: benchmark_cli.py  deploy_lambda.py  generate_travel_sample.py  introspect_travel_tables.py  production_validation.py  seed_dev_data.py  smoke_test.py  test_media_services.py  validate_dag.py  verify_travel_advisories.py
backend/src/: __main__.py  cli.py  config.py  dependencies.py  main.py
backend/src/api/: analytics.py  channels.py  community.py  discovery.py  errors.py  health.py  middleware.py  optimization.py  pipeline.py  rate_limit.py  research.py  router.py  schedule.py  series.py  topics.py  videos.py
backend/src/db/: connection.py  queries.py
backend/src/db/queries/: __init__.py  analytics.py  channel.py  community.py  cost.py  localization.py  pipeline.py  podcast.py  research.py  schedule.py  series.py  topic.py  video.py
backend/src/models/: analytics.py  assembly.py  audio.py  benchmark.py  caption.py  channel.py  community.py  compilation.py  content_safety.py  cost.py  description.py  discovery_run.py  distribution.py  image.py  localization.py  music.py  pagination.py  partner_app_metric.py  performance.py  pipeline.py  podcast.py  research.py  schedule.py  script.py  series.py  short.py  thumbnail.py  topic.py  travel_advisory.py  video.py  video_destination.py  voiceover.py  youtube.py
backend/src/monitoring/: grafana_queries.sql
backend/src/pipeline/: orchestrator.py  stages.py  worker.py
backend/src/pipeline/handlers/: __init__.py  _helpers.py  assembly.py  audio.py  captions.py  images.py  music.py  post_upload.py  script.py  script_travel.py  thumbnails.py  upload.py  voiceover.py
backend/src/services/: analytics_collector.py  audio_processor.py  benchmark.py  budget_enforcer.py  caption_generator.py  channel_manager.py  community.py  compilation_generator.py  content_classifier.py  cross_platform.py  description_generator.py  foia_tracker.py  health_monitor.py  image_generator.py  image_processor.py  localizer.py  music_selector.py  newsletter.py  niche_router.py  performance_analyzer.py  podcast_publisher.py  prompt_optimizer.py  publish_scheduler.py  research_collector.py  rhyo_agent_client.py  script_generator.py  series_planner.py  shorts_generator.py  thumbnail_generator.py  topic_selector.py  video_assembler.py  voiceover_generator.py  youtube_uploader.py
backend/src/services/discovery/: __init__.py  __main__.py  advisory_poller.py  base.py  competitor_scanner.py  court_listener.py  gdelt_scanner.py  google_trends.py  orchestrator.py  reddit_scanner.py  topic_scorer.py  wikipedia_monitor.py
backend/src/services/prompts/: __init__.py  crime_prompts.py  travel_prompts.py
backend/src/services/providers/: __init__.py  base.py  image_fal.py  image_local.py  llm_anthropic.py  music_ace_step.py  music_library.py  tts_chatterbox.py  tts_fish.py  tts_kokoro.py
backend/src/services/script_generators/: __init__.py  travel_safety_generator.py
backend/src/utils/: circuit_breaker.py  cost_tracker.py  logging.py  retry.py  storage.py
backend/tests/: conftest.py  test_audio_processor.py  test_caption_generator.py  test_contracts.py  test_description_generator.py  test_health.py  test_image_processor.py  test_pipeline_integration.py  test_pipeline_scoring.py  test_script_generator.py  test_thumbnail_generator.py  test_travel_safety_generator.py  test_worker.py
backend/tests/fixtures/: hyderabad_banjara_hills_rhyo.md  sample_travel_script.txt
(+49 files in other folders)
